--- a/index.html
+++ b/index.html
@@ -90,9 +90,42 @@
                             <span class="link_span">Контакты</span>
                         </a>
                     </li>
+                    <div class="ava">
+                        <a href="#"><img src="./img/ava.png" alt=""></a>
+                    </div>
                 </ul>
-                <div class="ava">
-                    <a href="#"><img src="./img/ava.png" alt=""></a>
+                <div class="horizontal_menu">
+                    <div class="horizontal_menu_top">
+                        <li class="menu_item">
+                            <a class="menu_link" href="#">
+                                <span><i class="far fa-newspaper"></i></span>
+                                <span class="link_span">Статьи</span>
+                            </a>
+                        </li>
+                        <li class="menu_item">
+                            <a class="menu_link" href="#">
+                                <span><i class="fal fa-user-headset"></i></span>
+                                <span class="link_span">Поддержка</span>
+                            </a>
+                        </li>
+                    </div>
+                    <div class="horizontal_menu_bottom">
+                        <li class="menu_item">
+                            <a class="menu_link" href="#">
+                                <span><i class="fal fa-book-open"></i></span>
+                                <span class="link_span">Услуги</span>
+                            </a>
+                        </li>
+                        <li class="menu_item">
+                            <a class="menu_link" href="#">
+                                <span><i class="fal fa-address-book"></i></span>
+                                <span class="link_span">Контакты</span>
+                            </a>
+                        </li>
+                    </div>
+                    <div class="ava">
+                        <a href="#"><img src="./img/ava.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
